# BDMaster

./: .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
.github/workflows/: linux_build.yml  macos_build.yml  windows_build.yml
docs/: release_notes.md
docs/screenshots/: README.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bettermediainfo.rs  config.rs  constants.rs  controller.rs  lib.rs  main.rs  mkvtoolnix.rs  mpchc.rs  protocol.rs
src-tauri/src/bdrom/: clpi.rs  full_scan.rs  lang.rs  m2ts.rs  mod.rs  mpls.rs  report.rs  types.rs  udf.rs
src-tauri/src/bdrom/codec/: aac.rs  ac3.rs  avc.rs  dts.rs  dtshd.rs  hevc.rs  lpcm.rs  mod.rs  mpa.rs  mpeg2.rs  mvc.rs  pgs.rs  stream_buffer.rs  truehd.rs  vc1.rs
src/components/: About.tsx  BitRateTab.tsx  Cards.tsx  ChaptersTab.tsx  Config.tsx  DiscDetail.tsx  DiscInfoTab.tsx  Footer.tsx  FullReportTab.tsx  Layout.tsx  MainContent.tsx  NotificationSnackbar.tsx  QuickSummaryTab.tsx  ReportDocumentView.tsx  Toolbar.tsx  Welcome.tsx
src/i18n/: index.ts
src/i18n/locales/: de.json  en-US.json  es.json  fr.json  it.json  ja.json  zh-CN.json  zh-HK.json  zh-TW.json
src/lib/: dialog.ts  format.ts  fs.ts  protocol.ts  report.ts  reportI18n.ts  service.ts  store.tsx  types.ts
