[package]
name = "bdmaster"
version = "0.2.0"
description = "BDMaster - Blu-ray Disc Inspector"
authors = ["Sam Cao"]
edition = "2021"

[lib]
name = "bdmaster_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri = { version = "2.9", features = [] }
tauri-plugin-clipboard-manager = "2.3"
tauri-plugin-dialog = "2.4"
tauri-plugin-shell = "2.3"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
anyhow = "1"
once_cell = "1"
env_logger = "0.11"
encoding_rs = "0.8"
byteorder = "1.5"
ureq = { version = "2", features = ["json"] }
sysinfo = { version = "0.32", default-features = false, features = ["system"] }
